tests/inputs/int_rem_by_zero.txt.snap
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "unable to calculate 10 % 0",
    name: "int_rem_by_zero.txt",
    line: 1,
}

invalid operation: unable to calculate 10 % 0 (in int_rem_by_zero.txt:1)
----------------------------- int_rem_by_zero.txt -----------------------------
   1 > {{ 10 % 0 }}
     i    ^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

